[package]
name = "zenoh-flow-examples"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { path = "../zenoh-flow" }
env_logger = "0.9"
serde = { version = "1.0.55", features = ["derive"] }

lazy_static = "1.4.0"
mut_static = "5.0.0"
libc = "0.2.0"
csv = "1.1"

regex = "1"

reqwest = { version = "0.11", features = ["blocking", "json"] }
async-std = { version = "=1.9.0", features = ["attributes"] }
typetag = "0.1"
log = "0.4"
bincode = "1"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master", default-features = false, features = ["transport_tcp","transport_udp"]  }
uhlc = { git = "https://github.com/atolab/uhlc-rs.git", branch = "master" }

cxx = "1.0.52"
autocxx = "0.11.1"


[dev-dependencies]
rand = "0.8.0"
serde = { version = "1.0.55", features = ["derive"] }
async-std = { version = "=1.9.0", features = ["attributes","unstable"] }
futures = "0.3.5"
flume = "0.10"
serde_json = "1.0"

[build-dependencies]
autocxx-build = "0.11.1"

[[example]]
name = "replay-planner-operator"
crate-type = ["cdylib"]

[[example]]
name = "replay-planner-start-operator"
crate-type = ["cdylib"]

[[example]]
name = "replay-planner-end-operator"
crate-type = ["cdylib"]

[[example]]
name = "replay-planner-source"
crate-type = ["cdylib"]

[[example]]
name = "replay-planner-sink"
crate-type = ["cdylib"]

[[example]]
name = "random-source"
crate-type = ["cdylib"]

[[example]]
name = "generic-sink"
crate-type = ["cdylib"]
